# bobleesj.github.io

./: .buildinfo  .pre-commit-config.yaml  README.md  README.rst  decision-making.html  essays.html  genindex.html  getting-started.html  index.html  license.html  news.html  notes.html  objects.inv  open-source-leadership.html  principles.html  pyproject.toml  python-practices.html  research.html  search.html  searchindex.js  workflows.html  writing.html
.codespell/: ignore_words.txt
_posts/: 2024-02-19-tutorial-CBFV.md  2024-02-26-intro-to-python-package-manager.md  2024-03-02-python-test-cheatsheet.md  2024-03-03-github-actions.md  2024-03-03-python-cheatsheet.md  2024-03-11-python-styling-guide.md  2024-03-12-github-best-practices.md  2024-03-12-python-test-multiple-versions.md  2024-03-13-visual-studio-terminal.md  2024-03-22-mathematical-typesetting.md  2024-03-22-python-package-distribution.md  2024-03-24-markdown-prettier.md  2024-05-23-python-logging.md  2024-05-24-python-matrix-operation.md  2024-06-04-python-static-type-checking.md  2024-06-17-python-test-environments.md  2024-06-20-python-naming-practices.md  2024-07-01-precommiter.md  2024-07-01-ruff.md  2024-08-07-open-source-python-workflow.md  2024-08-30-conda-ecosystem.md  2024-08-31-conda-forge-distribute.md  2024-08-31-conda-pip-installation.md  2024-11-23-diffraction.md  2025-03-03-kinetics.md  2025-05-30-python-atomic-environment.md  2025-05-30-python-package-best-practices.md  2025-06-10-phonons.md
_sources/: essays.rst.txt  getting-started.rst.txt  index.rst.txt  notes.rst.txt  open-source-leadership.rst.txt  principles.rst.txt  python-practices.rst.txt  research.rst.txt  workflows.rst.txt
doc/: Makefile
news/: main.rst
requirements/: docs.txt  tests.txt
snippets/: example-table.html
tests/: test_functions.py
(+47 files in other folders)
